@@ -2,6 +2,7 @@ package template
 
 import (
 	"errors"
+	"strings"
 
 	"github.com/elastic/beats/libbeat/common"
 )
@@ -208,6 +209,9 @@ func (p *Processor) object(f *common.Field) common.MapStr {
 	}
 
 	switch f.ObjectType {
+	case "scaled_float":
+		dynProperties = p.scaledFloat(f)
+		addDynamicTemplate(f, dynProperties, matchType("*"))
 	case "text":
 		dynProperties["type"] = "text"
 
@@ -242,12 +246,16 @@ func addDynamicTemplate(f *common.Field, properties common.MapStr, matchType str
 	if len(f.Path) > 0 {
 		path = f.Path + "."
 	}
+	pathMatch := path + f.Name
+	if !strings.ContainsRune(pathMatch, '*') {
+		pathMatch += ".*"
+	}
 	template := common.MapStr{
 		// Set the path of the field as name
 		path + f.Name: common.MapStr{
 			"mapping":            properties,
 			"match_mapping_type": matchType,
-			"path_match":         path + f.Name + ".*",
+			"path_match":         pathMatch,
 		},
 	}
 
