@@ -36,8 +36,14 @@
       format: percentage
       description: >
         Total CPU usage.
-    # TODO: how to document cpu list?
-    #- name: core
-    #  type: array
-    #  description: >
-    #    Dictionary with list of cpu and usage inside.
+    - name: core.*.pct
+      type: object
+      object_type: scaled_float
+      format: percentage
+      description: >
+        Percentage of CPU time in this core.
+    - name: core.*.ticks
+      type: object
+      object_type: long
+      description: >
+        Number of CPU ticks in this core.
